--- a/escaleras.html
+++ b/escaleras.html
@@ -82,6 +82,27 @@
       box-shadow: 0 0 15px rgba(0,0,0,0.7);
       border-radius: 8px;
     }
+
+    .video-flotante {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80vw;
+      max-height: 80vh;
+      z-index: 999;
+      display: none;
+      cursor: pointer;
+    }
+
+    .video-flotante video {
+      width: 100%;
+      height: auto;
+      border: 4px solid white;
+      box-shadow: 0 0 15px rgba(0,0,0,0.7);
+      border-radius: 8px;
+      background-color: #000;
+    }
   </style>
 </head>
 <body>
@@ -105,14 +126,14 @@
 
   <!-- Zona huellas -->
   <svg class="zona-interactiva" viewBox="0 0 1920 1080">
-    <g transform="translate(0,1080) scale(0.1,-0.1)" onclick="window.location.href = 'pasillo.html'">
+    <g transform="translate(0,1080) scale(0.1,-0.1)" onclick="toggleVideoHuellas()">
       <path d="M9380 5053 c-30 -1 -158 -7 -285 -13 -126 -6 -247 -14 -268 -17 l-38 -6 3 -55 3 -55 105 -66 105 -67 3 -286 2 -286 28 -30 c15 -16 62 -75 105 -132 77 -101 77 -102 77 -163 0 -34 3 -127 7 -206 l6 -144 125 -176 c68 -97 130 -181 138 -187 9 -7 23 -116 45 -350 17 -186 35 -341 39 -344 3 -3 126 -96 272 -208 l266 -203 5 -57 c4 -31 14 -183 23 -337 l16 -280 265 -353 c226 -301 269 -353 287 -349 11 3 442 89 956 192 514 103 938 190 942 194 4 3 -170 140 -386 303 l-393 298 -6 77 c-4 43 -9 196 -13 340 l-7 262 -261 207 c-143 114 -262 208 -264 209 -1 1 -11 139 -23 306 -11 167 -22 309 -23 314 -2 6 -157 84 -344 174 l-340 163 -6 62 c-3 33 -8 121 -12 194 l-7 133 -150 102 c-82 56 -158 106 -167 111 -22 12 -27 56 -36 324 -6 172 -9 204 -23 211 -9 5 -152 52 -317 105 -312 99 -303 97 -454 89z"/>
     </g>
   </svg>
 
     <!-- tounknown -->
   <svg class="zona-interactiva" viewBox="0 0 1920 1080">
-    <g transform="translate(0,1080) scale(0.1,-0.1)" onclick="window.location.href = 'pasillo.html'">
+    <g transform="translate(0,1080) scale(0.1,-0.1)" onclick="toggleVideoUnknown()">
       <path d="M2688 8727 l-38 -11 0 -3573 0 -3573 23 5 c24 6 2306 442 2622 502
 105 19 193 38 197 42 5 4 9 1423 10 3153 l3 3146 -40 6 c-41 6 -1381 163
 -1845 216 -140 16 -391 45 -557 65 -327 38 -320 37 -375 22z"/>
@@ -140,17 +161,54 @@
   <img id="imgNota" src="" alt="Imagen ampliada">
 </div>
 
+<!-- Overlay y video para huellas -->
+<div id="huellasOverlay" class="overlay" onclick="toggleVideoHuellas()"></div>
+<div id="videoHuellas" class="video-flotante">
+  <video id="huellasVideo" width="80%" height="auto" controls style="display: none;">
+    <source src="Videos\Escalera.mp4" type="video/mp4">
+    Tu navegador no soporta el elemento de video.
+  </video>
+</div>
+
+<!-- Overlay y video para unknown -->
+<div id="unknownOverlay" class="overlay" onclick="toggleVideoUnknown()"></div>
+<div id="videoUnknown" class="video-flotante">
+  <video id="unknownVideo" width="80%" height="auto" controls style="display: none;">
+    <source src="Videos\Entrada.mp4" type="video/mp4">
+    Tu navegador no soporta el elemento de video.
+  </video>
+</div>
+
 <!-- Script -->
 <script>
   const overlay = document.getElementById('notaOverlay');
   const imagen = document.getElementById('imagenNota');
   const imgTag = document.getElementById('imgNota');
+  
+  // Elementos para videos
+  const huellasVideo = document.getElementById('huellasVideo');
+  const huellasVideoContainer = document.getElementById('videoHuellas');
+  const huellasOverlay = document.getElementById('huellasOverlay');
+  
+  const unknownVideo = document.getElementById('unknownVideo');
+  const unknownVideoContainer = document.getElementById('videoUnknown');
+  const unknownOverlay = document.getElementById('unknownOverlay');
 
+  // Sonidos
   const abrirSonido = new Audio("Resources/sonidos/Notas.mp3");
   const cerrarSonido = new Audio("Resources/sonidos/Notas.mp3");
+  const huellasSonido = new Audio("Resources/sonidos/huellas.mp3");
+  const unknownSonido = new Audio("Resources/sonidos/unknown.mp3");
 
+  // Precargar sonidos
   abrirSonido.preload = "auto";
   cerrarSonido.preload = "auto";
+  huellasSonido.preload = "auto";
+  unknownSonido.preload = "auto";
+
+  // Estado de los videos
+  let huellasVideoVisible = false;
+  let unknownVideoVisible = false;
 
   function mostrarImagen(ruta) {
     imgTag.src = ruta;
@@ -176,10 +234,53 @@
       console.warn("Error al reproducir sonido:", e);
     }
   }
+
+  function toggleVideoHuellas() {
+    huellasVideoVisible = !huellasVideoVisible;
+
+    const displayState = huellasVideoVisible ? 'block' : 'none';
+    huellasVideoContainer.style.display = displayState;
+    huellasOverlay.style.display = displayState;
+
+    if (huellasVideoVisible) {
+      huellasVideo.style.display = 'block';
+      huellasVideo.play();
+      try {
+        huellasSonido.currentTime = 0;
+        huellasSonido.play();
+      } catch (e) {
+        console.warn("Error al reproducir sonido de huellas:", e);
+      }
+    } else {
+      huellasVideo.pause();
+      huellasVideo.currentTime = 0;
+      huellasVideo.style.display = 'none';
+    }
+  }
+
+  function toggleVideoUnknown() {
+    unknownVideoVisible = !unknownVideoVisible;
+
+    const displayState = unknownVideoVisible ? 'block' : 'none';
+    unknownVideoContainer.style.display = displayState;
+    unknownOverlay.style.display = displayState;
+
+    if (unknownVideoVisible) {
+      unknownVideo.style.display = 'block';
+      unknownVideo.play();
+      try {
+        unknownSonido.currentTime = 0;
+        unknownSonido.play();
+      } catch (e) {
+        console.warn("Error al reproducir sonido de unknown:", e);
+      }
+    } else {
+      unknownVideo.pause();
+      unknownVideo.currentTime = 0;
+      unknownVideo.style.display = 'none';
+    }
+  }
 </script>
 
 </body>
 </html>
-
-
-
