--- a/pasillo.html
+++ b/pasillo.html
@@ -113,7 +113,16 @@
   <!-- volveratraspasillo -->
   <svg class="zona-interactiva" viewBox="0 0 1920 1080">
     <g transform="translate(0,1080) scale(0.1,-0.1)" onclick="window.location.href = 'escaleras.html'">
-      <path d="M15560 5400 l0 -5400 1820 0 1820 0 0 5400 0 5400 -1820 0 -1820 0 0 -5400z"/>
+      <path d="M9257 8383 c-10 -19 -35 -42 -58 -54 -37 -18 -46 -19 -91 -9 -41 10
+-52 18 -66 46 -24 52 -62 44 -210 -44 -80 -48 -112 -75 -240 -213 l-148 -157
+-92 -232 c-75 -188 -101 -267 -138 -423 -74 -315 -75 -341 -77 -2362 l-2
+-1720 23 -165 c12 -91 28 -203 35 -250 l12 -85 1392 -3 1393 -2 4 22 c3 13 21
+142 41 288 l36 265 -6 1785 -6 1785 -46 290 -46 290 -124 285 -125 285 -184
+160 c-102 88 -200 173 -219 188 l-34 28 -68 -30 c-96 -42 -159 -49 -210 -22
+-22 11 -44 28 -48 38 -6 15 -9 14 -22 -12 -32 -63 -80 -79 -150 -50 -20 8 -37
+14 -38 13 -1 -2 -8 -21 -16 -43 -21 -58 -54 -71 -139 -56 -65 12 -68 14 -89
+55 -11 24 -21 48 -21 54 0 7 -13 4 -32 -8 -40 -22 -63 -26 -105 -16 -40 9 -55
+27 -63 74 l-6 37 -17 -32z"/>
     </g>
   </svg>
 
