--- a/balcon.html
+++ b/balcon.html
@@ -248,5 +248,6 @@ l1633 38 601 -388 600 -388 91 59 91 58 3 658 c2 362 0 2531 -4 4821 l-6 4162
   }
 </script>
 
+<script src="audio.js"></script>
 </body>
 </html>
