--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Felisberto</title>
+  <title>El vestido blanco</title>
   <style>
     * {
       margin: 0;
@@ -70,22 +70,87 @@
     }
 
     .main-title {
-      font-size: 5vw;
-      margin-bottom: 2vh;
+      font-size: 2vw;
+      margin-bottom: 10vh;
       font-weight: 700;
+      user-select: none;
     }
 
     .main-subtitle {
       font-size: 2.5vw;
-      padding: 12px 24px;
+      padding: 16px 28px;
       border-radius: 50px;
       cursor: pointer;
       transition: all 0.4s ease;
+      user-select: none;
+    }
+
+    .main-subtitle2 {
+      font-size: 2.5vw;
+      padding: 16px 28px;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      user-select: none;
     }
 
     .main-subtitle:hover {
-      background-color: rgba(255,255,255,0.1);
+      color: #ffd;
+      text-shadow: 0 0 5px white;
+      background-color: transparent;
       transform: scale(1.1);
+    }
+
+    .main-subtitle2:hover {
+      color: #ffd;
+      text-shadow: 0 0 5px white;
+      background-color: transparent;
+      transform: scale(1.1);
+    }
+
+    .texto {
+      position: absolute;
+      bottom: 2vh;
+      font-size: 0.9vw;
+      opacity: 0.8;
+      z-index: 3;
+      text-align: center;
+      max-width: 50vw;
+      user-select: none;
+    }
+
+    .texto2 {
+      position: absolute;
+      bottom: 8vh;
+      user-select: none;
+      font-size: 0.9vw;
+      opacity: 0.8;
+      z-index: 3;
+      text-align: center;
+      max-width: 40vw;
+    }
+
+    /* Estilos para el overlay de la guía */
+    .guia-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.8);
+      z-index: 999;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .guia-imagen {
+      max-width: 70vw;
+      max-height: 70vh;
+      border: 4px solid white;
+      box-shadow: 0 0 20px rgba(255,255,255,0.3);
+      cursor: default;
     }
   </style>
 </head>
@@ -98,44 +163,72 @@
     </div>
 
     <div class="content-layer">
-      <h1 class="main-title">Felisberto</h1>
+      <h1 class="main-title">La leyenda: una adaptación libre y ficcionada
+         <br>del cuento "El Vestido Blanco" de Felisberto Hernández</h1>
       <p class="main-subtitle">Iniciar</p>
+      <p class="main-subtitle2">Guía Sugerida</p>
+  
+      <p class="texto">Para la correcta visualización del sitio, se recomienda el uso de cualquier navegador en su útima versión</p>
+      <p class="texto2">Alexis Peña, Joaquín Nieto, Francisco Macri, Paola Oliveros, <br>Agustín Santiñaque, Esmeralda Moreira, Julia Olivera, Emiliano Martinez</p>
     </div>
   </div>
 
+  <!-- Overlay para la guía -->
+  <div id="guiaOverlay" class="guia-overlay" onclick="cerrarGuia()">
+    <img src="Resources/guia.png" class="guia-imagen" alt="Guía Sugerida" onclick="event.stopPropagation()">
+  </div>
+
   <script>
-    if (document.querySelector('.background-layer')) {
-      document.addEventListener('DOMContentLoaded', () => {
-        const content = document.querySelector('.content-layer');
-        const bgLayer = document.querySelector('.background-layer');
-        const baseLayer = document.querySelector('.base-layer');
-        const subtitle = document.querySelector('.main-subtitle');
-
-        function resetState() {
-          bgLayer.style.opacity = '1';
-          baseLayer.style.opacity = '0';
-          content.style.opacity = '1';
-        }
-
-        subtitle.addEventListener('click', () => {
-          bgLayer.style.opacity = '0';
-          content.style.opacity = '0';
-          baseLayer.style.opacity = '1';
-
-          setTimeout(() => {
-            window.location.href = 'escaleras.html';
-          }, 1500);
-        });
-
-        window.addEventListener('pageshow', (event) => {
-          if (event.persisted) {
-            resetState();
-            window.location.reload();
-          }
-        });
-      });
+    // Función para cerrar la guía
+    function cerrarGuia() {
+      document.getElementById('guiaOverlay').style.display = 'none';
     }
-  </script>
 
+    document.addEventListener('DOMContentLoaded', () => {
+      const content = document.querySelector('.content-layer');
+      const bgLayer = document.querySelector('.background-layer');
+      const baseLayer = document.querySelector('.base-layer');
+      const subtitle = document.querySelector('.main-subtitle');
+      const guiaBtn = document.querySelector('.main-subtitle2');
+      const guiaOverlay = document.getElementById('guiaOverlay');
+
+      function resetState() {
+        bgLayer.style.opacity = '1';
+        baseLayer.style.opacity = '0';
+        content.style.opacity = '1';
+      }
+
+      // Función para mostrar la guía
+      function mostrarGuia() {
+        guiaOverlay.style.display = 'flex';
+      }
+
+      subtitle.addEventListener('click', () => {
+        // Iniciar audio al hacer clic en "Iniciar"
+        if (window.audioManager) {
+          window.audioManager.startAudio();
+        }
+        
+        // Transición existente
+        bgLayer.style.opacity = '0';
+        content.style.opacity = '0';
+        baseLayer.style.opacity = '1';
+
+        setTimeout(() => {
+          window.location.href = 'escaleras.html';
+        }, 1500);
+      });
+
+      // Evento para mostrar la guía
+      guiaBtn.addEventListener('click', mostrarGuia);
+
+      window.addEventListener('pageshow', (event) => {
+        if (event.persisted) {
+          resetState();
+          window.location.reload();
+        }
+      });
+    });
+  </script>
 </body>
 </html>
