--- a/ropero.html
+++ b/ropero.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Interacción SVG Adaptable</title>
+  <title>Ropero</title>
   <style>
     body {
       margin: 0;
